--- a/Source/moja.flint.example.agri/CMakeLists.txt
+++ b/Source/moja.flint.example.agri/CMakeLists.txt
@@ -33,6 +33,7 @@ set(PROJECT_MODULE_HEADERS
 	include/moja/flint/example/${PACKAGE}/buildlandunitmodule.h
 	include/moja/flint/example/${PACKAGE}/timeseriestransform.h
 	include/moja/flint/example/${PACKAGE}/landusemodule.h
+	include/moja/flint/example/${PACKAGE}/spatialtransform.h
 )
  
 set(PROJECT_MODULE_SOURCES
@@ -43,6 +44,7 @@ set(PROJECT_MODULE_SOURCES
 	src/buildlandunitmodule.cpp
 	src/timeseriestransform.cpp
 	src/landusemodule.cpp
+	src/spatialtransform.cpp
 )
  
 set(PROJECT_TRANSFORM_HEADERS
